--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+.env
+.local
 
 # vercel
 .vercel
@@ -36,5 +37,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-.env
