chore: update node modules

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "pingus": "^1.1.12"
+    "pingus": "^1.1.12",
+    "tcp-ping": "^0.1.1"
   }
 }
