--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "pingus": "^1.1.12",
-    "tcp-ping": "^0.1.1"
+    "is-reachable": "^5.2.1",
+    "mysql": "^2.18.1"
   }
 }
