--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "JinseoMyeon",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "is-reachable": "^5.2.1",
